add thêm docker gnafana vào để theo dõi tiến độ

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pyspark==3.4.0 
-findspark
-kafka-python
-mysql.connector
+# pyspark==3.4.0 
+# findspark
+# kafka-python
+# mysql.connector
 pymysql
-yaml
+pyyaml
+spycopg2-binary
