--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,7 +82,9 @@ services:
       - cdc-network
 
   spark:
-    image: bitnami/spark:3.5.1
+    build:
+      context: .
+      dockerfile: Dockerfile.spark
     container_name: spark
     environment:
       - SPARK_MODE=master
@@ -133,6 +135,26 @@ services:
     depends_on:
       - spark
     
+    networks:
+      - cdc-network
+
+  prometheus:
+    image: prom/prometheus:v2.47.0
+    volumes:
+      - ./docker/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - cdc-network
+  
+
+  grafana:
+    image: grafana/grafana:10.1.0
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
     networks:
       - cdc-network
     
